@@ -44,7 +44,7 @@
 
 #include <assert.h>
 
-TDS_RCSID(var, "$Id: query.c,v 1.196 2006-08-07 19:37:59 freddy77 Exp $");
+TDS_RCSID(var, "$Id: query.c,v 1.197 2006-08-08 14:43:51 freddy77 Exp $");
 
 static void tds_put_params(TDSSOCKET * tds, TDSPARAMINFO * info, int flags);
 static void tds7_put_query_params(TDSSOCKET * tds, const char *query, int query_len);
@@ -254,9 +254,6 @@ tds_submit_query_params(TDSSOCKET * tds, const char *query, TDSPARAMINFO * param
  
 	if (tds_set_state(tds, TDS_QUERYING) != TDS_QUERYING)
 		return TDS_FAIL;
- 
-	/* Jeff's hack to handle long query timeouts */
-	tds->query_start_time = time(NULL);
  
 	query_len = strlen(query);
  
@@ -1992,7 +1989,6 @@ tds_cursor_declare(TDSSOCKET * tds, TDSCURSOR * cursor, int *something_to_send)
 				return TDS_FAIL;
 
 			tds->out_flag = TDS_NORMAL;
-			tds->query_start_time = time(NULL);
 		}
 		if (tds->state != TDS_QUERYING || tds->out_flag != TDS_NORMAL)
 			return TDS_FAIL;
@@ -2033,8 +2029,6 @@ tds_cursor_open(TDSSOCKET * tds, TDSCURSOR * cursor, int *something_to_send)
 	if (!*something_to_send) {
 		if (tds_set_state(tds, TDS_QUERYING) != TDS_QUERYING)
 			return TDS_FAIL;
-
-		tds->query_start_time = time(NULL);
 	}
 	if (tds->state != TDS_QUERYING)
 		return TDS_FAIL;
@@ -2155,7 +2149,6 @@ tds_cursor_setrows(TDSSOCKET * tds, TDSCURSOR * cursor, int *something_to_send)
 				return TDS_FAIL;
 
 			tds->out_flag = TDS_NORMAL;
-			tds->query_start_time = time(NULL);
 		}
 		if (tds->state != TDS_QUERYING  || tds->out_flag != TDS_NORMAL)
 			return TDS_FAIL;
@@ -2249,7 +2242,6 @@ tds_cursor_fetch(TDSSOCKET * tds, TDSCURSOR * cursor, TDS_CURSOR_FETCH fetch_typ
 	if (tds_set_state(tds, TDS_QUERYING) != TDS_QUERYING)
 		return TDS_FAIL;
 
-	tds->query_start_time = time(NULL);
 	tds_set_cur_cursor(tds, cursor);
 
 	if (IS_TDS50(tds)) {
@@ -2327,7 +2319,6 @@ tds_cursor_close(TDSSOCKET * tds, TDSCURSOR * cursor)
 	if (tds_set_state(tds, TDS_QUERYING) != TDS_QUERYING)
 		return TDS_FAIL;
 
-	tds->query_start_time = time(NULL);
 	tds_set_cur_cursor(tds, cursor);
 
 	if (IS_TDS50(tds)) {
@@ -2394,7 +2385,6 @@ tds_cursor_setname(TDSSOCKET * tds, TDSCURSOR * cursor)
 	if (tds_set_state(tds, TDS_QUERYING) != TDS_QUERYING)
 		return TDS_FAIL;
 
-	tds->query_start_time = time(NULL);
 	tds_set_cur_cursor(tds, cursor);
 
 	/* RPC call to sp_cursoroption */
@@ -2456,7 +2446,6 @@ tds_cursor_update(TDSSOCKET * tds, TDSCURSOR * cursor, TDS_CURSOR_OPERATION op, 
 	if (tds_set_state(tds, TDS_QUERYING) != TDS_QUERYING)
 		return TDS_FAIL;
 
-	tds->query_start_time = time(NULL);
 	tds_set_cur_cursor(tds, cursor);
 
 	if (IS_TDS50(tds)) {
@@ -2554,7 +2543,6 @@ tds_cursor_dealloc(TDSSOCKET * tds, TDSCURSOR * cursor)
 	if (IS_TDS50(tds)) {
 		if (tds_set_state(tds, TDS_QUERYING) != TDS_QUERYING)
 			return TDS_FAIL;
-		tds->query_start_time = time(NULL);
 		tds_set_cur_cursor(tds, cursor);
 
 		tds->out_flag = TDS_NORMAL;
