@@ -64,7 +64,7 @@
 #include <dmalloc.h>
 #endif
 
-TDS_RCSID(var, "$Id: util.c,v 1.67 2006-08-03 18:31:48 freddy77 Exp $");
+TDS_RCSID(var, "$Id: util.c,v 1.68 2006-08-08 14:43:51 freddy77 Exp $");
 
 /* for now all messages go to the log */
 int tds_debug_flags = TDS_DBGFLAG_ALLLVL | TDS_DBGFLAG_SOURCE;
@@ -147,6 +147,8 @@ tds_set_state(TDSSOCKET * tds, TDS_STATE state)
 				       "Attempt to initiate a new SQL Server operation with results pending.");
 			return tds->state;
 		}
+
+		tds->query_start_time = time(NULL);
 
 		/* TODO check this code, copied from tds_submit_prepare */
 		tds_free_all_results(tds);
