@@ -1,3 +1,7 @@
+Tue Aug 08 16:42:39 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/query.c src/tds/util.c:
+	- fix timeout problem setting correctly query_start_time
+
 Tue Aug 08 14:43:50 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/unittests/Makefile.am:
 	* src/odbc/unittests/timeout2.c(added):
